--- a/QT/CityGenerator/mainwindow.ui
+++ b/QT/CityGenerator/mainwindow.ui
@@ -19,9 +19,18 @@
      <rect>
       <x>30</x>
       <y>20</y>
-      <width>281</width>
-      <height>231</height>
+      <width>800</width>
+      <height>600</height>
      </rect>
+    </property>
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
