--- a/QT/CityGenerator/mainwindow.ui
+++ b/QT/CityGenerator/mainwindow.ui
@@ -15,7 +15,7 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+    <item row="0" column="1">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="GLWidget" name="glWidget" native="true">
@@ -38,8 +38,8 @@
       </item>
      </layout>
     </item>
-    <item row="0" column="1">
-     <widget class="QFrame" name="frame">
+    <item row="0" column="2">
+     <widget class="QFrame" name="frame_parameters">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>0</horstretch>
@@ -627,6 +627,391 @@
        <property name="text">
         <string>Generate</string>
        </property>
+      </widget>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QFrame" name="frame_info">
+      <property name="minimumSize">
+       <size>
+        <width>100</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>100</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <widget class="QGroupBox" name="gb_statistics">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>100</width>
+         <height>641</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="title">
+        <string>Statistics</string>
+       </property>
+       <widget class="QLabel" name="lbl_perlinCalls">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>20</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Perlin calls:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_mainRoads">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>60</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Main roads:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_smallRoads">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>100</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Small roads:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d1Buildings">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>140</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>D1 buildings:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d2Buildings">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>180</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>D2 buildings:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d3Buildings">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>220</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>D3 buildings:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_totalBuildings">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>260</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Total buildings:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d1Grass">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>300</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>D1 grass:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d2Grass">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>340</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>D2 grass:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d3Grass">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>380</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>D3 grass:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_totalGrass">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>420</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Total grass:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_perlinCallsValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>40</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_mainRoadsValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>80</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_smallRoadsValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>120</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d1BuildingsValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>160</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d2BuildingsValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>200</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d3BuildingsValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>240</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_totalBuildingsValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>280</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d1GrassValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>320</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d2GrassValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>360</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_d3GrassValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>400</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_totalGrassValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>440</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_integerSeed">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>460</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Integer seed:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_integerSeedValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>480</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_generationTime">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>500</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Generation time:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lbl_generationTimeValue">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>520</y>
+          <width>80</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
       </widget>
      </widget>
     </item>
