UserStudy - Added a button for setting the camera to a specific position and direction. This makes it easier to take screenshots from the same angle.

--- a/QT/CityGenerator/mainwindow.ui
+++ b/QT/CityGenerator/mainwindow.ui
@@ -1180,6 +1180,19 @@
          <string>0</string>
         </property>
        </widget>
+       <widget class="QPushButton" name="btn_resetCamera">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>730</y>
+          <width>81</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Reset Camera</string>
+        </property>
+       </widget>
       </widget>
      </widget>
     </item>
